cmake_minimum_required(VERSION 3.26)

project(c__Exercises LANGUAGES CXX)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

add_executable(exercise1a ex1a.cpp)
add_executable(exercise1b ex1b.cpp)
add_executable(exercise_tests tests.cpp)
add_executable(exercise2a ex2a.cpp)
add_executable(exercise2b ex2b.cpp)
add_executable(exercise3a ex3a.cpp)
add_executable(exercise3b ex3b.cpp)
add_executable(exercise4 ex4.cpp)
add_executable(exercise4new ex4NEW.cpp)
add_executable(exercise5 ex5.cpp)
add_executable(exercise5new ex5NEW.cpp)
add_executable(exercise6 ex6.cpp)
add_executable(exercise7 ex7.cpp)
